[r197]
- Merged SVN commits in ChangeLog belonging to 7.0.10 release.
[r198]
- Added return value handling several functions to prevent GCC compiler 
  warnings regarding unused results (-Wunused-result).
[r199]
- pacsat.c Increased pfh buffer sizes by 1 char to account for the null (VE7FET)
[r200]
- Changed version number to 7.0.11
[r201]
- Extended xfbbC client local console connect failure message.
[r202]
- Added several changes to the README file.
[r203]
- Fixed problem with console connections when xfbbD is running on a 64 bit OS.
[r204-r208]
- Added SVN ignore list.
- Removed autotools generated files.
[r209]
- Fixed K@ [BBS] command not working correcly when trying to kill message(s) 
  addressed to @BBS where a full H-route is used (entered manually or from WP).
[r210]
- Fixed when c_filter or m_filter aren't found the first attempt after FBB 
  start, they won't be called on subsequent connects or messages.
[r211]
- Added extra error handling in drv_sock.c to prevent a segfault loop under
  some circumstances.
[r212]
- Fixed tabs in last commit. Missing comment r211: Added extra error handling 
  in drv_sock.c to prevent a segfault loop under some circumstances.
[r213]
- Corrected tabs for changes committed in [r209] and [r210]
[r214]
- Added comments for some options in fbbopt.conf.
[r215]
- Changed * characters into # in forward.sys to match comment character with other files.
[r216]
- Clarified callsign setting a bit more in generated fbb.conf file.
[r217]
- Changed maintenance scripts to use build system's prefix path.
[r218]
- Corrected error message in initfwd.c
[r219]
- Removed private callsign check for SB command because of problems with
  sending bulletins to destinations which validate with the private callsign
  check (eg. 7PLUS@WW)
[r220]
- Added notification in messages received via SMTP
[r221]
- Changed several files to reflect current maintainer on request of 
  Bernard F6BVP. He has announced he definately stopped writing code for FBB.