@@ -269,12 +269,12 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 
 		if (i > tport[*port].nbcan)
 		{
-			if (write (new, TelnetInit, strlen (TelnetInit)) != strlen (TelnetInit))
+			if (write (new, TelnetInit, strlen (TelnetInit)) == -1)
 				perror ("rcv_tcp() socket write error");
 
 			/* Impossible d'affecter le canal -> deconnexion */
 			sprintf (buf, "\r\nSorry, no more channels available\r\n\r\n");
-			if (write (new, buf, strlen (buf)) != strlen (buf))
+			if (write (new, buf, strlen (buf)) == -1)
 				perror ("rcv_tcp() socket write error");
 
 			close (new);
@@ -293,18 +293,18 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 			if (p_port[*port].typort == TYP_ETH)
 			{
 				sprintf (buf, "\r\n%s BBS data access\r\n\r\n", my_call);
-				if (write (new, buf, strlen (buf)) != strlen (buf))
+				if (write (new, buf, strlen (buf)) == -1)
 					perror ("rcv_tcp() socket write error");
 				}
 			else
 			{
-				if (write (new, TelnetInit, strlen (TelnetInit)) != strlen (TelnetInit))
+				if (write (new, TelnetInit, strlen (TelnetInit)) == -1)
 					perror ("rcv_tcp() socket write error");
 
 				if ((fptr = fopen (c_disque ("LANG\\TELNET.ENT"), "rt")) == NULL)
 				{
 					sprintf (buf, "\r\n%s BBS. TELNET Access\r\n\r\n", my_call);
-					if (write (new, buf, strlen (buf)) != strlen (buf))
+					if (write (new, buf, strlen (buf)) == -1)
 						perror ("rcv_tcp() socket write error");
 				}
 				else
@@ -322,7 +322,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 							buf[nb + 1] = '\0';
 						}
 						ptr = var_txt (buf);
-						if (write (new, ptr, strlen (ptr)) != strlen (ptr))
+						if (write (new, ptr, strlen (ptr)) == -1)
 							perror ("rcv_tcp() socket write error");
 					}
 					fclose (fptr);
@@ -330,7 +330,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 			}
 			sprintf (buf, "Callsign : ");
 			
-			if (write (new, buf, strlen (buf)) != strlen (buf))
+			if (write (new, buf, strlen (buf)) == -1)
 				perror ("rcv_tcp() socket write error");
 
 			val = p_port[*port].pk_t;
@@ -367,7 +367,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 		{
 			sprintf (buf, "Timeout, disconnected !\r\n");
 
-			if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+			if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 				perror ("rcv_tcp() socket write error");
 			close (tport[*port].tcan[can].sock);
 			clear_can (*port, can);
@@ -552,7 +552,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 						{
 							sprintf (buf, "Callsign error, disconnected !\r\n");
 /*							fprintf (stderr, "Callsign error, disconnected !\n");*/
-							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 								perror ("rcv_tcp() socket write error");
 							close (tport[*port].tcan[can].sock);
 							tport[*port].tcan[can].sock = -1;
@@ -564,12 +564,12 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 							buffer[20] = '\0';
 							sprintf (buf, "Invalid callsign \"%s\" !\r\n", buffer);
 /*							fprintf (stderr, "Invalid callsign \"%s\" !\n", buffer);*/
-							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 								perror ("rcv_tcp() socket write error");
 							
 							sprintf (buf, "Callsign : ");
 /*							fprintf (stderr, "Callsign : ");*/
-							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 								perror ("rcv_tcp() socket write error");
 						}
 						break;
@@ -599,7 +599,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 							else
 							{
 								sprintf (buf, "Password : ");
-								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 									perror ("rcv_tcp() socket write error");
 								tport[*port].tcan[can].state = WAITINGPASS;
 								tport[*port].tcan[can].nb_try = 0;
@@ -611,7 +611,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 						{
 							sprintf (buf, "Callsign error, disconnected !\r\n");
 /*							fprintf (stderr, "Callsign error, disconnected !\n");*/
-							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 								perror ("rcv_tcp() socket write error");
 							close (tport[*port].tcan[can].sock);
 							tport[*port].tcan[can].sock = -1;
@@ -628,15 +628,15 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 								char buf[80];
 
 								sprintf (buf, "Unregistered callsign \"%s\" !\r\n", buffer);
-								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 									perror ("rcv_tcp() socket write error");
 								
 								sprintf (buf, "For registration send message to SYSOP.\r\n\n");
-								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 									perror ("rcv_tcp() socket write error");
 								
 								sprintf (buf, "Callsign : ");
-								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 									perror ("rcv_tcp() socket write error");
 							}
 						}
@@ -669,7 +669,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 					if (tcp_check_pass (*port, can, buffer))
 					{
 						sprintf (buf, "\r\nLogon Ok. Type NP to change password.\r\n\r\n");
-						if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+						if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 							perror ("rcv_tcp() socket write error");
 						
 						sprintf (buffer, "(%d) CONNECTED to %s-%d",
@@ -695,7 +695,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 							else
 							{
 								sprintf (buf, "Password error, disconnected !\r\n");
-								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+								if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 									perror ("rcv_tcp() socket write error");
 								close (tport[*port].tcan[can].sock);
 								tport[*port].tcan[can].sock = -1;
@@ -706,7 +706,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 							char buf[80];
 
 							sprintf (buf, "Password error !\r\nPassword : ");							
-							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+							if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 								perror ("rcv_tcp() socket write error");
 						}
 					}
@@ -723,7 +723,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 					{
 						/* Read-Only mode accepted */
 						sprintf (buf, "\r\nLogon Ok. You have a read-only access.\r\n\r\n");
-						if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+						if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 							perror ("rcv_tcp() socket write error");
 						sprintf (buffer, "(%d) READONLY to %s-%d",
 								 can, tport[*port].tcan[can].callsign.call,
@@ -739,7 +739,7 @@ int rcv_tcp (int *port, int *canal, int *cmd, char *buffer, int *len, ui_header 
 					else
 					{
 						sprintf (buf, "Callsign : ");
-						if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) != strlen (buf))
+						if (write (tport[*port].tcan[can].sock, buf, strlen (buf)) == -1)
 							perror ("rcv_tcp() socket write error");
 						tport[*port].tcan[can].state = WAITINGCALL;
 					}
@@ -1121,7 +1121,7 @@ static int tcp_trame (int port, int canal, char *data, int len)
 /* 						write(tport[port].tcan[canal].sock, buffer, strlen(buffer)); */
 /*						printf (" -> DONT %02x\n", carac); */
 						sprintf (buf, "%c%c%c", IAC, DONT, carac);
-						if (write (tport[port].tcan[canal].sock, buf, strlen (buf)) != strlen (buf))
+						if (write (tport[port].tcan[canal].sock, buf, strlen (buf)) == -1)
 							perror ("tcp_trame() socket write error");
 					}
 					break;
@@ -1130,7 +1130,7 @@ static int tcp_trame (int port, int canal, char *data, int len)
 					{
 /*						printf (" -> WONT %02x\n", carac); */
 						sprintf (buf, "%c%c%c", IAC, WONT, carac);
-						if (write (tport[port].tcan[canal].sock, buf, strlen (buf)) != strlen (buf))
+						if (write (tport[port].tcan[canal].sock, buf, strlen (buf)) == -1)
 							perror ("tcp_trame() socket write error");
 					}
 					break;
@@ -1535,7 +1535,7 @@ static int s_status (tcan_t * can)
 					can->state = SENDCALL;
 				else
 					can->state = CONNECTED;
-				if (write (can->sock, &res, 0) != 0)
+				if (write (can->sock, &res, 0) == -1)
 					perror ("s_status() socket write error");
 				
 				res |= EXCEPT_EVENT;
@@ -1594,8 +1594,7 @@ static void read_only_alert (int port, int can)
 	memset (buf, 0, sizeof (buf));
 
 	sprintf (buf, READ_ONLY);
-	//write (tport[port].tcan[can].sock, buf, strlen (buf));
-	if (write (tport[port].tcan[can].sock, buf, strlen (buf)) != 0)
+	if (write (tport[port].tcan[can].sock, buf, strlen (buf)) == -1)
 		perror ("read_only_alert() socket write error");
 }
 
